[UAA-2] Config datasource

--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,23 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<spring.profiles.active>dev</spring.profiles.active>
+			</properties>
+		</profile>
+		<!--<profile>-->
+		<!--<id>heroku</id>-->
+		<!--<properties>-->
+		<!--<spring.profiles.active>heroku</spring.profiles.active>-->
+		<!--</properties>-->
+		<!--</profile>-->
+	</profiles>
+
 
 </project>
