[UAA-4] Add User, Role model

--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,42 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.liquibase</groupId>
+					<artifactId>liquibase-maven-plugin</artifactId>
+					<version>${liquibase.version}</version>
+					<configuration>
+						<changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
+						<diffChangeLogFile>
+							src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml
+						</diffChangeLogFile>
+						<driver>com.mysql.jdbc.Driver</driver>
+						<url>jdbc:mysql://localhost:3306/shop2</url>
+						<defaultSchemaName></defaultSchemaName>
+						<username>root</username>
+						<password></password>
+						<referenceUrl>
+							hibernate:spring:vn.edu.leading.shop.models?dialect=org.hibernate.dialect.MySQL5InnoDBDialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+						</referenceUrl>
+						<verbose>true</verbose>
+						<logging>debug</logging>
+						<diffExcludeObjects>oauth_access_token, oauth_approvals, oauth_client_details,
+							oauth_client_token, oauth_code, oauth_refresh_token
+						</diffExcludeObjects>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 	</build>
+
 	<profiles>
 		<profile>
 			<id>dev</id>
