[UAA-5] Add changelog user, role

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+		<liquibase.version>3.5.5</liquibase.version>
+		<javassist.version>3.22.0-GA</javassist.version>
+		<liquibase-hibernate5.version>3.6</liquibase-hibernate5.version>
+		<validation-api.version>2.0.1.Final</validation-api.version>
+		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+		<!-- Add config liquibase -->
 	</properties>
 
 	<dependencies>
@@ -50,6 +57,8 @@
 		</dependency>
 	</dependencies>
 
+
+	<!-- Add config liquibase -->
 	<build>
 		<plugins>
 			<plugin>
@@ -73,12 +82,12 @@
 							src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml
 						</diffChangeLogFile>
 						<driver>com.mysql.jdbc.Driver</driver>
-						<url>jdbc:mysql://localhost:3306/shop2</url>
+						<url>jdbc:mysql://localhost:3306/uaa</url>
 						<defaultSchemaName></defaultSchemaName>
 						<username>root</username>
 						<password></password>
 						<referenceUrl>
-							hibernate:spring:vn.edu.leading.shop.models?dialect=org.hibernate.dialect.MySQL5InnoDBDialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+							hibernate:spring:vn.edu.leading.uaa.models?dialect=org.hibernate.dialect.MySQL5InnoDBDialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 						</referenceUrl>
 						<verbose>true</verbose>
 						<logging>debug</logging>
@@ -86,29 +95,39 @@
 							oauth_client_token, oauth_code, oauth_refresh_token
 						</diffExcludeObjects>
 					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.javassist</groupId>
+							<artifactId>javassist</artifactId>
+							<version>${javassist.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>org.liquibase.ext</groupId>
+							<artifactId>liquibase-hibernate5</artifactId>
+							<version>${liquibase-hibernate5.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-starter-data-jpa</artifactId>
+							<version>${spring-boot.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>javax.validation</groupId>
+							<artifactId>validation-api</artifactId>
+							<version>${validation-api.version}</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 			</plugins>
 		</pluginManagement>
-
+		<!-- Profile config -->
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<spring.profiles.active>dev</spring.profiles.active>
-			</properties>
-		</profile>
-		<!--<profile>-->
-		<!--<id>heroku</id>-->
-		<!--<properties>-->
-		<!--<spring.profiles.active>heroku</spring.profiles.active>-->
-		<!--</properties>-->
-		<!--</profile>-->
-	</profiles>
-
+	<!-- Add config liquibase -->
 
 </project>
